alignemtn issues

--- a/wp-content/themes/ar-freight/scss/_banner.scss
+++ b/wp-content/themes/ar-freight/scss/_banner.scss
@@ -36,7 +36,7 @@
                             }
                             div.wrapper {
                                 position: absolute;
-                                top: 180px;
+                                top: 250px;
                                 left: 0;
                                 right: 0;
                                 width: 100%;
@@ -45,7 +45,7 @@
                                     top: 40%;
                                 }
                                 @media all and (max-width: 1300px) {
-                                    top: 200px;
+                                    top: 230px;
                                 }
                                 @media all and (max-width: 1024px) {
                                     top: 230px;
