--- a/wp-content/themes/ar-freight/scss/_contact.scss
+++ b/wp-content/themes/ar-freight/scss/_contact.scss
@@ -355,7 +355,7 @@ $freight-blue: #1674ab;
         font-size: 25px !important;
         display: inline-block;
         padding-bottom: 20px;
-        margin-bottom: 20px;
+        margin-bottom: 200px;
         color: #282828;
         border-bottom: 1px solid #a0a0a0;
     }
