--- a/wp-content/themes/ar-freight/scss/_inner-banner.scss
+++ b/wp-content/themes/ar-freight/scss/_inner-banner.scss
@@ -68,7 +68,7 @@
     }
     &__title {
         color: #fff;
-        font-size: 50px;
+        font-size: 47px;
         font-family: Roboto-Bd;
         width: 700px;
         line-height: 70px;
@@ -88,7 +88,7 @@
     }
     &__title-block {
         float: left;
-        margin: 63px 0;
+        margin: 60px 0;
         @media all and (max-width: 991px) {
             float: none;
             margin: 40px 0;
@@ -159,7 +159,7 @@
 .archives-banner,
 .incoterms-banner {
     &__title {
-        padding-top: 60px;
+        //padding-top: 60px;
         width: 100%;
         text-align: center;
     }
